@@ -1282,7 +1282,7 @@ standard дает возможность провести исследовани
 force дает максимум проверок даже в случаях, когда ресурс работает без обхода или с более простыми стратегиями.
 
 Есть ряд других параметров, которые не будут спрашиваться в диалоге, но которые можно переопределить через
-переменные. Переопределение работает только из рутового шелла. При повышении привилегий через su/sudo переменные теряются.
+переменные.
 
 DOMAINS - список тестируемых доменов через пробел
 CURL_MAX_TIME - время таймаута curl в секундах
